// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST Can get AST from complex, unordered protobuf 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fieldName": "a",
        "isArray": false,
        "typeName": "double",
      },
      Object {
        "fieldName": "b",
        "isArray": false,
        "typeName": "float",
      },
      Object {
        "fieldName": "c",
        "isArray": false,
        "typeName": "int32",
      },
      Object {
        "fieldName": "d",
        "isArray": false,
        "typeName": "int64",
      },
      Object {
        "fieldName": "e",
        "isArray": false,
        "typeName": "uint32",
      },
      Object {
        "fieldName": "f",
        "isArray": false,
        "typeName": "uint64",
      },
      Object {
        "fieldName": "g",
        "isArray": false,
        "typeName": "sint32",
      },
      Object {
        "fieldName": "h",
        "isArray": false,
        "typeName": "sint64",
      },
      Object {
        "fieldName": "i",
        "isArray": false,
        "typeName": "fixed32",
      },
      Object {
        "fieldName": "j",
        "isArray": false,
        "typeName": "fixed64",
      },
      Object {
        "fieldName": "k",
        "isArray": false,
        "typeName": "sfixed32",
      },
      Object {
        "fieldName": "l",
        "isArray": false,
        "typeName": "sfixed64",
      },
      Object {
        "fieldName": "m",
        "isArray": false,
        "typeName": "bool",
      },
      Object {
        "fieldName": "n",
        "isArray": false,
        "typeName": "string",
      },
      Object {
        "fieldName": "o",
        "isArray": false,
        "typeName": "bytes",
      },
    ],
    "typeName": "ExampleMessage",
  },
]
`;

exports[`AST Can get AST from protobuf with array 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fieldName": "name",
        "isArray": false,
        "typeName": "string",
      },
      Object {
        "fieldName": "addresses",
        "isArray": true,
        "typeName": "string",
      },
      Object {
        "fieldName": "balances",
        "isArray": true,
        "typeName": "int",
      },
    ],
    "typeName": "ExampleMessage",
  },
]
`;

exports[`AST Can get AST from simple protobuf 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fieldName": "name",
        "isArray": false,
        "typeName": "string",
      },
      Object {
        "fieldName": "age",
        "isArray": false,
        "typeName": "int32",
      },
      Object {
        "fieldName": "department",
        "isArray": false,
        "typeName": "Department",
      },
    ],
    "typeName": "User",
  },
  Object {
    "fields": Array [
      Object {
        "fieldName": "name",
        "isArray": false,
        "typeName": "string",
      },
    ],
    "typeName": "Department",
  },
]
`;

exports[`AST Can get root and namespace from complex, unordered protobuf 1`] = `
Object {
  "ExampleMessage": Object {
    "fields": Object {
      "a": Object {
        "id": 1,
        "type": "double",
      },
      "b": Object {
        "id": 2,
        "type": "float",
      },
      "c": Object {
        "id": 3,
        "type": "int32",
      },
      "d": Object {
        "id": 4,
        "type": "int64",
      },
      "e": Object {
        "id": 5,
        "type": "uint32",
      },
      "f": Object {
        "id": 6,
        "type": "uint64",
      },
      "g": Object {
        "id": 7,
        "type": "sint32",
      },
      "h": Object {
        "id": 8,
        "type": "sint64",
      },
      "i": Object {
        "id": 9,
        "type": "fixed32",
      },
      "j": Object {
        "id": 10,
        "type": "fixed64",
      },
      "k": Object {
        "id": 11,
        "type": "sfixed32",
      },
      "l": Object {
        "id": 12,
        "type": "sfixed64",
      },
      "m": Object {
        "id": 13,
        "type": "bool",
      },
      "n": Object {
        "id": 14,
        "type": "string",
      },
      "o": Object {
        "id": 15,
        "type": "bytes",
      },
    },
  },
}
`;

exports[`AST Can get root and namespace from simple protobuf 1`] = `
Object {
  "Department": Object {
    "fields": Object {
      "name": Object {
        "id": 1,
        "type": "string",
      },
    },
  },
  "User": Object {
    "fields": Object {
      "age": Object {
        "id": 2,
        "type": "int32",
      },
      "department": Object {
        "id": 3,
        "type": "Department",
      },
      "name": Object {
        "id": 1,
        "type": "string",
      },
    },
  },
}
`;
